fix(frontend):text alignment correction

--- a/frontend/src/css/Home.styl
+++ b/frontend/src/css/Home.styl
@@ -11,7 +11,6 @@
       width 100%
       &__title
         font-weight bold
-        text-align center
         margin-bottom standardSpacing
       &__input
         margin textSpacing 0
@@ -19,7 +18,7 @@
         margin-top standardSpacing
         display flex
         &__input
-          margin auto textSpacing
+          margin auto textSpacing auto 0
       &__smallmsg
         font-size metadataFontSize
       &__btn
